--- a/index.html
+++ b/index.html
@@ -1432,6 +1432,54 @@
                 </div>
             </div>
 
+            <!-- AI Image Generator Project Card - FEATURED -->
+            <div class="project-card project-card-purple">
+                <div class="featured-badge">⭐ FEATURED PROJECT</div>
+
+                <div class="project-screenshot" style="background: linear-gradient(135deg, #667eea, #764ba2);">
+                    <img src="img/Ai-image-generater.png" alt="AI Image Generator Screenshot" style="width: 100%; height: auto; border-radius: 10px; box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);" />
+                </div>
+
+                <div class="project-info">
+                    <div>
+                        <h3 style="color: #667eea;">🎨 AI Image Generator</h3>
+                        <p class="project-description">
+                            A full-featured web application that uses Stable Diffusion AI to generate stunning images from text prompts. Features multiple style presets, image history gallery, and intuitive controls. Create amazing artwork with just a text description! Built as part of the AI with Python course at CodeCub.
+                        </p>
+
+                        <div class="tech-stack">
+                            <span class="tech-badge" style="background: linear-gradient(135deg, #3b82f6, #60a5fa);">Python</span>
+                            <span class="tech-badge" style="background: linear-gradient(135deg, #ef4444, #f87171);">Streamlit</span>
+                            <span class="tech-badge" style="background: linear-gradient(135deg, #8b5cf6, #a78bfa);">HuggingFace API</span>
+                            <span class="tech-badge" style="background: linear-gradient(135deg, #667eea, #764ba2);">Stable Diffusion</span>
+                            <span class="tech-badge" style="background: linear-gradient(135deg, #10b981, #34d399);">Pillow</span>
+                        </div>
+
+                        <div style="background: rgba(102, 126, 234, 0.1); border-left: 3px solid #667eea; padding: 15px; border-radius: 8px; margin-bottom: 20px;">
+                            <h4 style="color: #667eea; font-size: 1rem; margin-bottom: 10px;">🌟 Key Features:</h4>
+                            <ul style="color: #777; line-height: 1.8; margin-left: 15px;">
+                                <li>🎨 Text-to-image generation with Stable Diffusion AI</li>
+                                <li>🎭 7 style presets (Anime, Realistic, Digital Art, Watercolor, 3D Render, Sketch, Oil Painting)</li>
+                                <li>🖼️ Image history gallery to track all generated images</li>
+                                <li>💾 Download functionality for saving images</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="project-links">
+                        <a href="https://github.com/CodeCubCA/ai-image-generator-candyna5" target="_blank" class="project-btn btn-github">
+                            <svg class="github-icon" viewBox="0 0 16 16" fill="currentColor">
+                                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
+                            </svg>
+                            View Code
+                        </a>
+                        <a href="https://huggingface.co/spaces/Candyna/ai-image-generator" target="_blank" class="project-btn" style="background: linear-gradient(135deg, #667eea, #764ba2); color: #fff; box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);">
+                            🚀 Live Demo
+                        </a>
+                    </div>
+                </div>
+            </div>
+
             <!-- Personal Portfolio Website Project Card -->
             <div class="project-card">
                 <div class="project-screenshot">
